[package]
name = "sergelang"
version = "0.1.0"
edition = "2021"



[dependencies]
ariadne = "0.2.0"
chumsky = { git="https://github.com/chiakicage/chumsky", features=["regex", "label"] }
num_enum = "0.6.1"
rpds = "0.13.0"
slotmap = "1.0.6"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
llvm-sys = "150"
libc = "0.2"
paste = "1.0.12"